# my-first-rust-api

./: .env  Cargo.toml
migrations/2020-01-22-014611_add_patients/: down.sql  up.sql
src/: graphql_operations.rs  graphql_schema.rs  main.rs  schema.rs
src/models/: doctor.rs  patient.rs  visit.rs
