[package]
name = "rust-grapql-api"
version = "0.1.0"
authors = ["mbronek7 <mbronek7@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0.0"
r2d2 = "0.8.8"
diesel = { version = "1.0.0", features = ["postgres", "r2d2"] }
dotenv = "0.9.0"
env_logger = "0.6"
futures = "0.1"
juniper = "0.13.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"